--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
   </head>
   <body>
     <div class="card">
-      <svg width="240" height="104" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M116.454 102.048L4.667 34.239c-3.56-2.054-6.61-5.42-3.142-7.627l112.184-66.364c1.682-1.07 4.237-1.773 5.951-.75l117.328 69.904c3.559 2.12 4.198 8.028.652 10.17L131.185 101.94a14.53 14.53 0 01-14.731.107z"
-          fill="#6862E6"
-          fill-rule="nonzero"
-          opacity=".099"
-        />
-      </svg>
       <div class="boxforanimations">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -456,17 +448,37 @@
         <h1>FAQ</h1>
         <div class="textbox" onclick="toggleText(event)">
           How many team members can I invite?
+
           <div class="showtext">
             No more than 2GB. All files in your account must fit your allotted
             storage space.
           </div>
+          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M1 .799l4 4 4-4"
+              stroke="#F47B56"
+              stroke-width="2"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
         </div>
+
         <div class="textbox" onclick="toggleText(event)">
           What is the maximum file upload size?
           <div class="showtext">
             No more than 2GB. All files in your account must fit your allotted
             storage space.
           </div>
+          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M1 .799l4 4 4-4"
+              stroke="#F47B56"
+              stroke-width="2"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
         </div>
         <div class="textbox" onclick="toggleText(event)">
           How do I reset my password?
@@ -474,6 +486,15 @@
             No more than 2GB. All files in your account must fit your allotted
             storage space.
           </div>
+          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M1 .799l4 4 4-4"
+              stroke="#F47B56"
+              stroke-width="2"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
         </div>
         <div class="textbox" onclick="toggleText(event)">
           Can I cancel my subscription?
@@ -481,6 +502,15 @@
             No more than 2GB. All files in your account must fit your allotted
             storage space.
           </div>
+          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M1 .799l4 4 4-4"
+              stroke="#F47B56"
+              stroke-width="2"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
         </div>
         <div class="textbox" onclick="toggleText(event)">
           Do you provide additional support?
@@ -488,6 +518,15 @@
             No more than 2GB. All files in your account must fit your allotted
             storage space.
           </div>
+          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M1 .799l4 4 4-4"
+              stroke="#F47B56"
+              stroke-width="2"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
         </div>
       </div>
     </div>
